    mode needs it.


  * status: On crippled filesystems, was displaying M for all annexed files
    that were present. Probably caused by a change to what git status
    displays in this situation. Fixed by treating files git thinks are
    modified the same as typechanged files.
  * addurl: Added --batch and --with-files options.
  * addurl: Support --json, particularly useful in --batch mode.
  * Debian: Adjust build dependencies for webapp, DAV. Now available on
    mips, mipsel, but temporarily removed armel since build is failing
    there.
  * info: Fix "backend usage" numbers, which were counting present keys
    twice.
  * info --json: Improve json for "backend usage", using a nested object
    with fields for each backend instead of the previous weird nested lists.
    This may break existing parsers of this json output, if there were any.
  * whereis --json: Make url list be included in machine-parseable form.
  * test: Added --keep-failures option.
  * unused: Bug fix when a new file was added to the annex, and then
    removed (but not git rmed). git still has the add staged in this case,
    so the content should not be unused and was wrongly treated as such.
  * migrate: Copy over metadata to new key.
  * rekey: No longer copies over urls from the old to the new key.
    It makes sense for migrate to do that, but not for this low-level
    (and little used) plumbing command to.
  * view: Fix crash in non-unicode capable locale when entering a view
    of metadata containing a slash or backslash.
  * When annex.http-headers is used to set the User-Agent header, avoid
    sending User-Agent: git-annex
  * Windows: Fix rsync cross-drive hack to work with msys2 rsync.
    Thanks, Pieter Kitslaar.

 -- Joey Hess <id@joeyh.name>  Sat, 19 Dec 2015 13:31:17 -0400

git-annex (5.20151218) unstable; urgency=medium

  * Add S3 features to git-annex version output.
  * webdav: When testing the WebDAV server, send a file with content.