@@ -35,6 +35,7 @@ git-annex (6.20151219) UNRELEASED; urgency=medium
     modified the same as typechanged files.
   * addurl: Added --batch and --with-files options.
   * addurl: Support --json, particularly useful in --batch mode.
+  * addurl: Refuse to overwrite any existing, non-annexed file.
   * Debian: Adjust build dependencies for webapp, DAV. Now available on
     mips, mipsel, but temporarily removed armel since build is failing
     there.
